Created attachment 62241 [details] reproducer +++ This bug was initially created as a clone of Bug #39347 +++ Use German Hunspell. Enter this NONSENSE sentence (including the leading and trailing quote characters): Wenn ich diesen Fehler testen Huhnd würde, würde ich jetzt einen Satz schreiben Huhnd. Und jetzt kommt noch ein Satz. Jetzt kommt ein Absatz. Wenn ich diesen Fehler testen Huhnd würde, würde ich jetzt einen Satz schreiben Huhnd. Wenn ich diesen Fehler testen Huhn würde, würde ich jetzt einen Satz schreiben Huhn Und jetzt kommt noch ein Satz. Jetzt kommt ein Absatz. Wenn ich diesen Fehler testen Huhn würde, würde ich jetzt einen Satz schreiben Huhn. While the sentence still does not make sense, note that the trailing dot after the second 'Huhn' is removed erroneously. This is very similar to bug 39347 and has a similar source, but different code is involved
Caolan McNamara committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=a3c47760e122baaf55f39107597aff2f5957aecd Resolves: fdo#50476 Dots inside quoted sentences get removed on "Correct All"
I mean the second pair of sentences is the result of change all on the first pair of sentences as additionally reported in https://bugs.freedesktop.org/show_bug.cgi?id=39347#c8