Resolves: fdo#50476 Dots inside quoted sentences get removed on "Correct All"

refactor the dodgy dot replacement code so that all the replacement paths go
through the same logic so that "Change All" does the same thing as repeated
"Change"s

Change-Id: Id63968e03409f676200a9ac546f7baa398f2eff8